feat: gemini refactoring and start on playwright mcp container

--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -12,6 +12,7 @@
     <a mat-list-item [routerLink]="['/audit']" (click)="onLinkClick()">Audit Location</a>
     <a mat-list-item [routerLink]="['/kiosk-mode']" (click)="onLinkClick()">Kiosk Mode</a>
     <a mat-list-item [routerLink]="['/gemini-chat']" (click)="onLinkClick()">Smart Chat</a>
+    <a mat-list-item [routerLink]="['/browser']" (click)="onLinkClick()">Browser Automation</a>
     <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
     <a mat-list-item [routerLink]="['/quick-label']" (click)="onLinkClick()">Quick Label</a>
 
