--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -16,6 +16,7 @@
     <a mat-list-item [routerLink]="['/sales']" (click)="onLinkClick()">Retailer Sales</a>
     <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
     <a mat-list-item [routerLink]="['/quick-label']" (click)="onLinkClick()">Quick Label</a>
+    <a mat-list-item [routerLink]="['/custom-barcodes']" (click)="onLinkClick()">Custom Barcodes</a>
 
     <mat-divider></mat-divider>
 
