--- a/ui/pantry-ui/src/app/recipe-edit/recipe-edit.component.html
+++ b/ui/pantry-ui/src/app/recipe-edit/recipe-edit.component.html
@@ -1,4 +1,13 @@
 <form *ngIf="recipe">
+    <!-- Breadcrumb Navigation -->
+    <nav class="breadcrumb-nav">
+        <a routerLink="/recipes">
+            <mat-icon>menu_book</mat-icon> Recipes
+        </a>
+        <span class="breadcrumb-separator">›</span>
+        <span class="breadcrumb-current">{{ recipe.id ? recipe.title || 'Edit Recipe' : 'New Recipe' }}</span>
+    </nav>
+
     <mat-tab-group>
         <mat-tab label="Details">
             <div class="row">
@@ -223,6 +232,14 @@
         </mat-tab>
     </mat-tab-group>
 
-    <button mat-raised-button (click)="save()">Save</button>
-    <button mat-raised-button (click)="delete()">Delete</button>
+    <button mat-raised-button color="primary" (click)="save()" [disabled]="isSaving || isDeleting">
+        <mat-spinner *ngIf="isSaving" [diameter]="20" class="btn-spinner-inline"></mat-spinner>
+        <mat-icon *ngIf="!isSaving">save</mat-icon>
+        {{ isSaving ? 'Saving…' : 'Save' }}
+    </button>
+    <button mat-raised-button color="warn" (click)="delete()" [disabled]="isDeleting || isSaving" *ngIf="recipe.id">
+        <mat-spinner *ngIf="isDeleting" [diameter]="20" class="btn-spinner-inline"></mat-spinner>
+        <mat-icon *ngIf="!isDeleting">delete</mat-icon>
+        {{ isDeleting ? 'Deleting…' : 'Delete' }}
+    </button>
 </form>
