--- a/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
+++ b/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
@@ -1,4 +1,13 @@
 <div class="recipe-container" *ngIf="recipe">
+    <!-- Breadcrumb Navigation -->
+    <nav class="breadcrumb-nav">
+        <a routerLink="/recipes">
+            <mat-icon>menu_book</mat-icon> Recipes
+        </a>
+        <span class="breadcrumb-separator">›</span>
+        <span class="breadcrumb-current">{{ recipe.title || 'Recipe' }}</span>
+    </nav>
+
     <!-- Header Section -->
     <div class="header">
         <div class="title-section">
@@ -39,8 +48,10 @@
             <button mat-flat-button color="primary" [routerLink]="['/recipes', recipe.id, 'edit']">
                 <mat-icon>edit</mat-icon> Edit
             </button>
-            <button mat-stroked-button color="warn" (click)="deleteRecipe()">
-                <mat-icon>delete</mat-icon> Delete
+            <button mat-stroked-button color="warn" (click)="deleteRecipe()" [disabled]="isDeleting">
+                <mat-spinner *ngIf="isDeleting" [diameter]="18" class="btn-spinner-inline"></mat-spinner>
+                <mat-icon *ngIf="!isDeleting">delete</mat-icon>
+                {{ isDeleting ? 'Deleting…' : 'Delete' }}
             </button>
             <button mat-stroked-button color="accent" (click)="createLeftover()">
                 <mat-icon>inventory_2</mat-icon> Make Leftover
